Fix: Header divs alignment

--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ a {
 .hero-main-container > .header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 1rem 0;
 }
 
